--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:IdSvvXNGcJ4F8xXSOuv+OuV77ewKsRa6InrZ2i8FkYw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
